Fix spacing, convert off of colorbox

--- a/pages/components/RecentPostItem/recentpostitem.module.css
+++ b/pages/components/RecentPostItem/recentpostitem.module.css
@@ -1,53 +1,32 @@
-.contents {
-  display: contents;
-}
-
 .wrapper {
   display: flex;
   gap: 3rem;
   flex-direction: row;
-  width: 90%;
-  max-width: 1000px;
-  margin: 3rem auto;
   align-items: center;
   backdrop-filter: contrast(0.8);
-  padding: var(--small-pad); 
+  padding: var(--small-pad);
   border-radius: 1rem;
   overflow: hidden;
   height: 20rem;
+  justify-content: space-between;
 }
 
-.text {
-  width: 90%;
-  max-width: 1000px;
-  margin: 0 auto;
+.wrapper * {
+  flex-basis: 50%;
 }
 
-.target {
-  display: contents;
-}
-
-.target > div {
-  padding: 0;
-  width: fit-content;
-  max-width: 90%;
-  overflow: hidden;
-  margin: 0 auto;
-}
-
-.target > div > a > img {
-  width: fit-content !important;
-  max-height: 50dvh !important;
-  object-fit: contain !important;
-  height: unset !important;
-  vertical-align: text-bottom;
+.img img {
+  object-fit: contain;
+  width: 100%;
+  aspect-ratio: 16/9;
+  
 }
 
 @media (max-width: 740px) {
   .wrapper {
     flex-direction: column;
-    width: calc(90% - 2rem);
     gap: 1rem;
     height: 30rem;
+    align-items: flex-start;
   }
 }
