--- a/pages/components/RecentPosts/recentposts.module.css
+++ b/pages/components/RecentPosts/recentposts.module.css
@@ -1,3 +1,15 @@
+.wrapper {
+    display: flex; 
+    flex-direction: column;
+    gap: var(--small-pad)
+    
+}
+.recentPostsWrapper {
+    display: flex; 
+    flex-direction: column;
+    gap: 3rem; 
+    
+}
 .paginatedWrapper {
     display: flex; 
     justify-content: center;
